Tests/RunCMake/CMakePresets/InvalidPresetBinaryDir-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidPresetBinaryDir:
Error: @7,20: "binaryDir" expected a string
      "binaryDir": \[\]
                   \^$
